--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
   },
   "author": "",
   "license": "ISC",
+  "jest": {
+    "moduleNameMapper": {
+      ".+\\.(css|styl|less|sass|scss|png|jpg|ttf|woff|woff2)$": "identity-obj-proxy"
+    }
+  },
   "babel": {
     "presets": [
       "@babel/preset-env",
@@ -20,31 +25,41 @@
     ]
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "file-loader": "^3.0.1",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
-    "redux": "^4.0.1"
+    "react-slick": "^0.23.2",
+    "react-spinners": "^0.5.1",
+    "redux": "^4.0.1",
+    "redux-localstorage": "^0.4.1",
+    "redux-thunk": "^2.3.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.3.0",
     "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.0.0",
-    "@babel/plugin-proposal-class-properties": "^7.3.0",
+    "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
     "css-loader": "^0.23.1",
+    "eslint": "^5.13.0",
+    "eslint-plugin-react": "^7.12.4",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^24.1.0",
+    "nock": "^10.0.6",
+    "react-test-renderer": "^16.7.0",
+    "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
     "style-loader": "^0.13.2",
     "webpack": "^4.28.4",
     "webpack-cli": "^3.2.1",
-    "webpack-dev-server": "^3.1.14",
-    "babel-eslint": "^10.0.1",
-    "eslint": "^5.13.0",
-    "eslint-plugin-react": "^7.12.4",
-    "jest": "^24.0.0",
-    "react-test-renderer": "^16.7.0"
+    "webpack-dev-server": "^3.1.14"
   }
 }
