--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@babel/preset-react": "^7.0.0",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "css-loader": "^0.23.1",
     "eslint": "^5.13.0",
     "eslint-plugin-react": "^7.12.4",
@@ -53,10 +54,12 @@
     "html-webpack-plugin": "^3.2.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.1.0",
+    "moxios": "^0.4.0",
     "nock": "^10.0.6",
     "react-test-renderer": "^16.7.0",
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
+    "redux-mock-store": "^1.5.3",
     "style-loader": "^0.13.2",
     "webpack": "^4.28.4",
     "webpack-cli": "^3.2.1",
